// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pbehavior-form Renders \`pbehavior-form\` with custom props 1`] = `
<div
  class="v-tabs"
>
  <div
    class="v-tabs__bar theme--light"
  >
    <transition-stub
      name="fade-transition"
    />
    <div
      class="v-tabs__wrapper"
    >
      <div
        class="v-tabs__container v-tabs__container--centered v-tabs__container--fixed-tabs"
      >
        <div
          class="v-tabs__slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs__slider primary"
          />
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item v-tabs__item--active"
          >
            General
          </a>
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
          >
            Patterns
          </a>
        </div>
      </div>
    </div>
    <transition-stub
      name="fade-transition"
    />
  </div>
  <div
    class="v-window"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
        >
          <div
            class="layout py-3 column"
          >
            <pbehavior-general-form-stub
              form="[object Object]"
              noenabled="true"
              withstartontrigger="true"
            />
            <c-enabled-color-picker-field-stub
              label="Use special color for this event?"
              row="row"
            />
            <c-collapse-panel-stub
              class="mb-2"
              title="Recurrence rule"
            >
              <recurrence-rule-form-stub
                rrule=""
              />
              <pbehavior-recurrence-rule-exceptions-field-stub
                class="mt-2"
                exceptions=""
                exdates=""
                withexdatetype="true"
              />
            </c-collapse-panel-stub>
            <!---->
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <div
            class="layout py-3 row justify-center"
          >
            <div
              class="flex xs12"
            >
              <pbehavior-patterns-form-stub
                form="[object Object]"
              />
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`pbehavior-form Renders \`pbehavior-form\` with required props 1`] = `
<div
  class="v-tabs"
>
  <div
    class="v-tabs__bar theme--light"
  >
    <transition-stub
      name="fade-transition"
    />
    <div
      class="v-tabs__wrapper"
    >
      <div
        class="v-tabs__container v-tabs__container--centered v-tabs__container--fixed-tabs"
      >
        <div
          class="v-tabs__slider-wrapper"
          style="transition: none;"
        >
          <div
            class="v-tabs__slider primary"
          />
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item v-tabs__item--active"
          >
            General
          </a>
        </div>
        <div
          class="v-tabs__div"
        >
          <a
            class="v-tabs__item"
          >
            Patterns
          </a>
        </div>
      </div>
    </div>
    <transition-stub
      name="fade-transition"
    />
  </div>
  <div
    class="v-window"
  >
    <div
      class="v-window__container"
    >
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
        >
          <div
            class="layout py-3 column"
          >
            <pbehavior-general-form-stub
              form="[object Object]"
            />
            <c-enabled-color-picker-field-stub
              label="Use special color for this event?"
              row="row"
            />
            <c-collapse-panel-stub
              class="mb-2"
              title="Recurrence rule"
            >
              <recurrence-rule-form-stub
                rrule=""
              />
              <pbehavior-recurrence-rule-exceptions-field-stub
                class="mt-2"
                exceptions=""
                exdates=""
                withexdatetype="true"
              />
            </c-collapse-panel-stub>
            <c-collapse-panel-stub
              class="mt-2"
              title="Comments"
            >
              <pbehavior-comments-field-stub
                comments=""
              />
            </c-collapse-panel-stub>
          </div>
        </div>
      </transition-stub>
      <transition-stub
        name=""
      >
        <div
          class="v-window-item"
          style="display: none;"
        >
          <div
            class="layout py-3 row justify-center"
          >
            <div
              class="flex xs12"
            >
              <pbehavior-patterns-form-stub
                form="[object Object]"
              />
            </div>
          </div>
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;
